<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    tools:context=".ReviewInterface">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/reviewTitleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/review_pageTitle"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RatingBar
            android:id="@+id/ratingBarReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/reviewEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviewTitleView" />

        <EditText
            android:id="@+id/reviewEditText"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/placeholder_review"
            android:importantForAutofill="yes"
            android:padding="16dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviewTitleView"
            app:layout_constraintVertical_bias="0.418" />

        <Button
            android:id="@+id/submitReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviewEditText"
            app:layout_constraintVertical_bias="0.518" />

        <TextView
            android:id="@+id/ratingReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_placeholder"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ratingBarReview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.82" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>


